tests/params/compile-fail/group_end_without_open.rs
prgpu::params! {
	pub enum Params {
		#[group(end)]
		#[checkbox(label = "A", default = false)]
		A,
	}
}

fn main() {}
